--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,13 @@ services:
       # do not try to map a folder up against app/node_modules inside a container
       - /app/node_modules
       - .:/app
+  tests:
+    tty: true
+    stdin_open: true
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - /app/node_modules
+      - .:/app
+    command: ["npm", "run", "test"]
